add french version of the resume

--- a/resume_fr.html
+++ b/resume_fr.html
@@ -42,7 +42,7 @@
                     <h4 class="no-margin"> Florent DALIGAND </h4>
                   </div>
                   <div class="col-xs-12">
-                    <h5 class="no-margin"> 26 years </h5>
+                    <h5 class="no-margin"> 26 ans </h5>
                   </div>
                 </div>
                 <div class="row">
@@ -93,7 +93,7 @@
         </div>
         <div class="row">
           <div class="col-xs-12 icon text-center">
-              <h2 class="title-job"> Software Developer</h2>
+              <h2 class="title-job"> Ingénieur Logiciel</h2>
           </div>
         </div>
       </div>
@@ -104,27 +104,29 @@
       		  <div class="col-xs-12 aboutme">
       			  <h3 class="no-margin">
                 <i class="fa fa-user circle-icon"></i>
-                <span>About Me</span>
+                <span>Présentation</span>
               </h3>
     			    <p class="text-justify" >
-      				  I develop innovative <span class="text-emphase">tools to automatize and optimize development tasks</span>, to analyze data in order to compute and extract only essential information. I also build web applications for <span class="text-emphase"> reporting and continous delivery</span>. To achieve that, I use a combination of technologies and several programming language.<br>
+                Je développe des outils pour <span class="text-emphase">automatiser et optimiser le développement logiciel</span>, pour analyser les données afin d'en sortir les informations essentielles. Je travaille également sur le développement d'application web pour mettre en valeur ces données pour améliorer la <span class="text-emphase">livraison en continue</span>. Pour ce faire, j'utilise une combinaison de technologie et de langage.<br>
 
-                I'm passionnate about <span class="text-emphase">learning new technologies</span> and I think that is a full part of my job. My learning choices are diverse, and cover <span class="text-emphase">big data to embedded system for IOT</span>, passing through organizational methods and web technologies. During my development, I like to take step back to do the right things rather than deliver a quick workaround.<br>
+                Je suis passionné par l'<span class="text-emphase">apprentissage de nouvelles technologies</span> et je pense que cela doit faire partie intégrante de mon travail. Les domaines peuvent être diverses, du big data aux systèmes embarqués pour l'IOT, en passant par les méthodolgie de travail ou les technologies du web.
+                Pendant mes développements, j'aime prendre du recul et analyser mon travail, afin de fournir la solution optimal à un besoin.  
 
-                I'm a <span class="text-emphase">creative,serious and implicated person</span>,who like to be helpful and attuned to my teammates.
+                Je suis quelqu'un de <span class="text-emphase">créatif, sérieux et impliqué</span>, qui aime aider, apprendre et partager avec ses collègues.
+                
     			    </p>
         		</div>
             <div class="col-xs-12 education">
               <div class="row formation">
                 <div class="col-xs-12">
-                  <h3 class="no-margin"><i class="fa fa-graduation-cap circle-icon"></i><span>Education</span></h3>
+                  <h3 class="no-margin"><i class="fa fa-graduation-cap circle-icon"></i><span>Formation</span></h3>
                 </div> 
                 <div class="col-xs-10 col-xs-offset-1">
                   <div class="diplome" style="height: 6em;">
                     <div class="date"> 2012 </div>
                     <div class="circle"> </div>
-                    <div class="name">  <strong> Master’s Degree</strong> </div>
-                    <div class="spec">Electrical Engineering</div>
+                    <div class="name">  <strong> Dîplome d'ingénieur</strong> </div>
+                    <div class="spec">Génie Electrique</div>
                     <div class="address"><i class="fa fa-map-marker"></i> INSA Lyon</div>
                   </div>
                 </div>
@@ -139,8 +141,8 @@
                   <div class="diplome" style="height: 7.5em;">
                     <div class="date"> 2009 </div>
                     <div class="circle"> </div>
-                    <div class="name">  <strong> Bachelor of Technology (BTech) </strong> </div>
-                    <div class="spec">Electrical Engineering and Industrial Computing</div>
+                    <div class="name">  <strong> DUT </strong> </div>
+                    <div class="spec">Génie Electrique et Informatique Industrielle (GEII)</div>
                     <div class="address"><i class="fa fa-map-marker"></i>IUTB Lyon 1</div>
                   </div>
                 </div>
@@ -155,8 +157,8 @@
                   <div class="diplome" style="height: 6em;">
                     <div class="date"> 2007 </div>
                     <div class="circle"> </div>
-                    <div class="name">  <strong> A-levels </strong> </div>
-                    <div class="spec">Electrical Engineering</div>
+                    <div class="name">  <strong> BAC STI </strong> </div>
+                    <div class="spec">Génie Electronique</div>
                     <div class="address"><i class="fa fa-map-marker"></i>Lycée Camille Claudel, Digoin</div>
                   </div>
                 </div>
@@ -168,12 +170,12 @@
             <div class="col-xs-12">
               <div class="row skill">
                 <div class="col-xs-12">
-                  <h3 class="no-margin"><i class="fa fa-cogs circle-icon"></i><span>Skills & Tools</span></h3>
+                  <h3 class="no-margin"><i class="fa fa-cogs circle-icon"></i><span>Compétences et Outils</span></h3>
                 </div>
                 <div class="col-xs-12">
                   <div class="row">
                     <div class="col-xs-4">
-                      <h5 class="no-margin text-center skill-domain"> Software and Midlleware </h5>
+                      <h5 class="no-margin text-center skill-domain"> Logiciel et Midlleware </h5>
                     </div>
                     <div class="col-xs-8 skill-tools">
                       <div class="row">
@@ -260,8 +262,8 @@
             <div class="col-xs-12">
             <h4 class="no-margin"><i class="fa fa-star circle-icon"></i><span> Hobbies</span></h4>
             </div>
-            <div class="col-xs-5 hobby"> <i class="fa fa-heart"></i> Cycling</div>
-            <div class="col-xs-6 hobby"> <i class="fa fa-heart"></i> Personal Web Project</div>
+            <div class="col-xs-5 hobby"> <i class="fa fa-heart"></i> Cyclisme</div>
+            <div class="col-xs-6 hobby"> <i class="fa fa-heart"></i> Développement Web</div>
             <div class="col-xs-5 hobby"> <i class="fa fa-heart"></i> Running</div>
             <div class="col-xs-6 hobby"> <i class="fa fa-heart"></i> Raspberry Pi</div>
           </div>
@@ -269,7 +271,7 @@
         <div class="col-xs-6 column">
           <div class="row experience">
             <div class="col-xs-12" style="padding:0;">
-              <h3 class="no-margin"><i class="fa fa-industry circle-icon"></i><span>Experience</span></h3>
+              <h3 class="no-margin"><i class="fa fa-industry circle-icon"></i><span>Experiences</span></h3>
               <div class="row exp-header">
                 <div class="col-xs-4">
                   <img src="icon/IS.jpg" class="img-thumbnail"/>
@@ -277,7 +279,7 @@
                 <div class="col-xs-8">
                   <div class="row">
                     <div class="col-xs-12">
-                      <h4 class="no-margin">Software developer</h4>
+                      <h4 class="no-margin">Developpeur Logiciel</h4>
                     </div>
                   </div>  
                   <div class="row">
@@ -285,7 +287,7 @@
                       10-2013
                     </div>
                     <div class="col-xs-5 no-right-padding no-left-padding">
-                      <em class="small">2 years 8 months</em>
+                      <em class="small">2 ans 8 mois</em>
                     </div>
                     <div class="col-xs-2">
                       now
@@ -306,12 +308,12 @@
                 <div class="col-xs-12">
                   <div class="job-description">
                     <p class="text-justify"> 
-                      Development and deployment  of the <span class="text-emphase">continuous integration</span> in a Firmware team. 
-                      This tools manage each new modification in a source code and launch a new <span class="text-emphase">build of the binaries</span> following by a complete and <span class="text-emphase">multi-stepped validation campaigns</span> to determine if source code update embeds regression. In addition, I assume the <span class="text-emphase">continuity of service</span> to respect project millestone 
+                      Développement et déploiment de l'intégration continue pour une équipe Firmware.
+                      Cet outils scrute le code source d'une application et lance une compilation à chaque modification.
+                      Cette étape est suivie par une validation compléte du binaire généré et par l'émission d'un rapport de test aux personnes concernées. En parallèle du dévelopement, un travail d'automatisation des campagnes de validation et une continuité de service sont assurés.   
                     </p>
                     <p class="text-justify">
-                      Framework development to render results from continuous integration.
-                      Integration of our own <span class="text-emphase">Jenkins plugin</span> for the database interaction. <span class="text-emphase">Database architecture creation</span> with necessary views, index and stored procedure. <span class="text-emphase">Web site specification, developement and deployement</span> for rendering results and manage continous integrtaion.
+                      Développement d'un framerwork d'exploitation et de visualisation des données issue de l'intégartion continue. la réalisation de ce framework a nécessité le développement d'un plug-in Jenkins pour la communication avec une base de donnée, la création des schémas pour cette base et des différents indexes, vues et procédure stockées.La spécification, le développement et le déployement en production d'une application web pour la visualisation des résultats de l'intégration continue.
                     </p>
                   </div>
                 </div>
@@ -323,7 +325,7 @@
                 <div class="col-xs-8">
                   <div class="row">
                     <div class="col-xs-12">
-                      <h4 class="no-margin"> Industrial Computing developer/Project manager</h4>
+                      <h4 class="no-margin"> Ingénieur en informatique industriel/Chef de projet</h4>
                     </div>
                   </div>  
                   <div class="row">
@@ -331,7 +333,7 @@
                       02-2012
                     </div>
                     <div class="col-xs-4 no-right-padding no-left-padding">
-                      <em class="small">1 year 10 months</em>
+                      <em class="small">1 ans 10 mois</em>
                     </div>
                     <div class="col-xs-4">
                       10-2013
@@ -352,12 +354,13 @@
                 <div class="col-xs-12">
                   <div class="job-description">
                     <p class="text-justify">
+
+                       En tant qu'ingénieur en informatique industriel, j'ai travaillé sur l'élaboration d'une nouvelle architecture logicielle pour rendre le code plus générique et apporté la possibilité de gérer des modules. J'ai également mis en place de plusieurs protocols de communication. Ce projet à commencé durant mon stage de fin d'étude et c'est poursuivit en tant qu'employé.
                        As an Industrial computing developer, I work on 
                       <span class="text-emphase">software architecture design</span>, developement of generic and <span class="text-emphase">modular source code</span>, implementation of <span class="text-emphase">new communication protocols</span>. Project started as an trainee and finish as employee. 
                     </p>
                     <p class="text-justify">
-                      <span class="text-emphase"> Project manager</span> on complex systems(electric, electronic, automatism).<br>
-                      <span class="text-emphase">International </span> project (Europe,Asia and Middle East) from 10k€ to +100k€.I was the unique interface with the customer after the purcahse order, organisator of key points ( relase planning , factory acceptance test, commissioning), <span class="text-emphase">technical support </span> main interface
+                    Chef de projet sur des systèmes complets ( automate programmable, électicité, mécanique). Projets principalement internationaux (Asie, Europe et Moyen-Orient) allant de 10k€ à +100k€. Interface principale avec le client après le bon de commande, j'avais en charge la gestion des points importants (planning de fabrication, test en usine, mise en service) et le support technique.
                     </p>
                   </div>
                 </div>
@@ -369,7 +372,7 @@
                 <div class="col-xs-8">
                   <div class="row">
                     <div class="col-xs-12">
-                      <h4 class="no-margin"> Embedded software developer</h4>
+                      <h4 class="no-margin"> Développeur systèmes embarquées</h4>
                     </div>
                   </div>  
                   <div class="row">
@@ -398,10 +401,10 @@
                 <div class="col-xs-12">
                   <div class="job-description">
                     <p class="text-justify">
-                      <span class="text-emphase">Development of the firmware</span> in an electronic joystick (THE5)<br> 
-                      <span class="text-emphase">Optimization of the main scheduler </span> code to fit real time processing.
-                      Development of new features involving PWM and CAN protocol. 
-                      Test plan specification and deployment of unitary test campaigns. 
+                      <span class="text-emphase"> Développement du firmware</span> d'un joystick électronique (THE5)<br> 
+                      <span class="text-emphase">Optimisation de l'ordonanceur </span> pour respecter les contraintes temps réel.
+                      Implémentaion de nouvelles fonctions méttant en oeuvre le protocol CAN et des sortie PWM
+                      Elaboration d'un plan de test et deploiment des tests.
                     </p>  
                  </div>
                 </div>
