add experience description in french

--- a/resume_fr.html
+++ b/resume_fr.html
@@ -107,19 +107,18 @@
                 <span>Présentation</span>
               </h3>
     			    <p class="text-justify" >
-                Je développe des outils pour <span class="text-emphase">automatiser et optimiser le développement logiciel</span>, pour analyser les données afin d'en sortir les informations essentielles. Je travaille également sur le développement d'application web pour mettre en valeur ces données pour améliorer la <span class="text-emphase">livraison en continue</span>. Pour ce faire, j'utilise une combinaison de technologie et de langage.<br>
+                Je développe des outils pour <span class="text-emphase">automatiser et optimiser le développement logiciel</span>,mais aussi pour analyser les données afin d'en sortir les informations essentielles. Je travaille également sur le développement d'application web pour mettre en valeur ces données.<br>
 
-                Je suis passionné par l'<span class="text-emphase">apprentissage de nouvelles technologies</span> et je pense que cela doit faire partie intégrante de mon travail. Les domaines peuvent être diverses, du big data aux systèmes embarqués pour l'IOT, en passant par les méthodolgie de travail ou les technologies du web.
+                Je suis passionné par l'<span class="text-emphase">apprentissage de nouvelles technologies</span> et je pense que cela doit faire partie intégrante de mon travail. Les domaines sont divers, du big data aux systèmes embarqués pour l'IOT, en passant par les méthodolgie de travail ou les technologies du web.
                 Pendant mes développements, j'aime prendre du recul et analyser mon travail, afin de fournir la solution optimal à un besoin.  
 
-                Je suis quelqu'un de <span class="text-emphase">créatif, sérieux et impliqué</span>, qui aime aider, apprendre et partager avec ses collègues.
-                
+                Je suis quelqu'un de <span class="text-emphase">créatif, sérieux et impliqué</span>, qui aime aider, partager et apprendre avec ses collègues.
     			    </p>
         		</div>
             <div class="col-xs-12 education">
               <div class="row formation">
                 <div class="col-xs-12">
-                  <h3 class="no-margin"><i class="fa fa-graduation-cap circle-icon"></i><span>Formation</span></h3>
+                  <h3 class="no-margin"><i class="fa fa-graduation-cap circle-icon"></i><span>Formations</span></h3>
                 </div> 
                 <div class="col-xs-10 col-xs-offset-1">
                   <div class="diplome" style="height: 6em;">
@@ -279,7 +278,7 @@
                 <div class="col-xs-8">
                   <div class="row">
                     <div class="col-xs-12">
-                      <h4 class="no-margin">Developpeur Logiciel</h4>
+                      <h4 class="no-margin">Développeur Logiciel</h4>
                     </div>
                   </div>  
                   <div class="row">
@@ -290,7 +289,7 @@
                       <em class="small">2 ans 8 mois</em>
                     </div>
                     <div class="col-xs-2">
-                      now
+                      
                     </div>
                   </div>
                   <div class="row">
@@ -308,12 +307,11 @@
                 <div class="col-xs-12">
                   <div class="job-description">
                     <p class="text-justify"> 
-                      Développement et déploiment de l'intégration continue pour une équipe Firmware.
-                      Cet outils scrute le code source d'une application et lance une compilation à chaque modification.
-                      Cette étape est suivie par une validation compléte du binaire généré et par l'émission d'un rapport de test aux personnes concernées. En parallèle du dévelopement, un travail d'automatisation des campagnes de validation et une continuité de service sont assurés.   
+                      Développement et déploiement de l'<span class="text-emphase">intégration continue</span> pour une équipe Firmware. Cet outil permet la compilation et la validation compète d'une application pour cahque modifications apportées au code source.
+                      En parallèle du développement de l'outil, un travail sur l'<span class="text-emphase">automatisation des campagnes de validation</span> et une continuité de service sont assurés.   
                     </p>
                     <p class="text-justify">
-                      Développement d'un framerwork d'exploitation et de visualisation des données issue de l'intégartion continue. la réalisation de ce framework a nécessité le développement d'un plug-in Jenkins pour la communication avec une base de donnée, la création des schémas pour cette base et des différents indexes, vues et procédure stockées.La spécification, le développement et le déployement en production d'une application web pour la visualisation des résultats de l'intégration continue.
+                      Développement d'un framerwork d'exploitation et de visualisation des données venant de l'intégration continue. La réalisation de ce projet a nécessité le développement d'un plug-in Jenkins pour la communication avec une base de données,ainsi que la création des schémas, indexes, vues et procédures stockées de cette base. La spécification, le développement et le déploiement en production d'une application web pour la visualisation des résultats.
                     </p>
                   </div>
                 </div>
@@ -325,7 +323,7 @@
                 <div class="col-xs-8">
                   <div class="row">
                     <div class="col-xs-12">
-                      <h4 class="no-margin"> Ingénieur en informatique industriel/Chef de projet</h4>
+                      <h4 class="no-margin"> Ingénieur en informatique industrielle/Chef de projet</h4>
                     </div>
                   </div>  
                   <div class="row">
@@ -354,13 +352,10 @@
                 <div class="col-xs-12">
                   <div class="job-description">
                     <p class="text-justify">
-
-                       En tant qu'ingénieur en informatique industriel, j'ai travaillé sur l'élaboration d'une nouvelle architecture logicielle pour rendre le code plus générique et apporté la possibilité de gérer des modules. J'ai également mis en place de plusieurs protocols de communication. Ce projet à commencé durant mon stage de fin d'étude et c'est poursuivit en tant qu'employé.
-                       As an Industrial computing developer, I work on 
-                      <span class="text-emphase">software architecture design</span>, developement of generic and <span class="text-emphase">modular source code</span>, implementation of <span class="text-emphase">new communication protocols</span>. Project started as an trainee and finish as employee. 
+                       En tant qu'ingénieur en informatique industrielle, j'ai travaillé sur l'élaboration d'une nouvelle architecture logicielle pour rendre le code plus générique et modulaire. Ce projet a commencé durant mon stage de fin d'étude et c'est poursuivit en tant qu'employé.
                     </p>
                     <p class="text-justify">
-                    Chef de projet sur des systèmes complets ( automate programmable, électicité, mécanique). Projets principalement internationaux (Asie, Europe et Moyen-Orient) allant de 10k€ à +100k€. Interface principale avec le client après le bon de commande, j'avais en charge la gestion des points importants (planning de fabrication, test en usine, mise en service) et le support technique.
+                    Chef de projet sur des systèmes complets ( automate programmable, électricité, mécanique). Projets internationaux (Asie, Europe et Moyen-Orient) allant de 10k€ à +100k€. Interface principale avec le client après le bon de commande, j'avais en charge la gestion des points importants (planning de fabrication, tests en usine, mise en service) et le support technique.
                     </p>
                   </div>
                 </div>
@@ -372,7 +367,7 @@
                 <div class="col-xs-8">
                   <div class="row">
                     <div class="col-xs-12">
-                      <h4 class="no-margin"> Développeur systèmes embarquées</h4>
+                      <h4 class="no-margin"> Développeur système embarqué</h4>
                     </div>
                   </div>  
                   <div class="row">
@@ -380,7 +375,7 @@
                       09-2010
                     </div>
                     <div class="col-xs-4 no-right-padding no-left-padding">
-                      <em class="small">6 months</em>
+                      <em class="small">6 mois</em>
                     </div>
                     <div class="col-xs-4">
                       02-2011
@@ -402,9 +397,9 @@
                   <div class="job-description">
                     <p class="text-justify">
                       <span class="text-emphase"> Développement du firmware</span> d'un joystick électronique (THE5)<br> 
-                      <span class="text-emphase">Optimisation de l'ordonanceur </span> pour respecter les contraintes temps réel.
-                      Implémentaion de nouvelles fonctions méttant en oeuvre le protocol CAN et des sortie PWM
-                      Elaboration d'un plan de test et deploiment des tests.
+                      <span class="text-emphase">Optimisation de l'ordonnanceur </span> pour respecter les contraintes temps réel.
+                      Implémentation de nouvelles fonctions mettant en oeuvre le protocole CAN et des sorties PWM.
+                      Elaboration d'un plan de test et déploiement de la campagne de validation.
                     </p>  
                  </div>
                 </div>
