--- a/resume.html
+++ b/resume.html
@@ -173,7 +173,7 @@
                 <div class="col-xs-12">
                   <div class="row">
                     <div class="col-xs-4">
-                      <h5 class="no-margin text-center skill-domain"> Software and Midlleware </h5>
+                      <h5 class="no-margin text-center skill-domain"> Software and Middleware </h5>
                     </div>
                     <div class="col-xs-8 skill-tools">
                       <div class="row">
