--- a/resume_fr.html
+++ b/resume_fr.html
@@ -174,7 +174,7 @@
                 <div class="col-xs-12">
                   <div class="row">
                     <div class="col-xs-4">
-                      <h5 class="no-margin text-center skill-domain"> Logiciel et Midlleware </h5>
+                      <h5 class="no-margin text-center skill-domain"> Logiciel et Middleware </h5>
                     </div>
                     <div class="col-xs-8 skill-tools">
                       <div class="row">
