change avatar and emphase some text

--- a/resume_fr.html
+++ b/resume_fr.html
@@ -311,7 +311,7 @@
                       En parallèle du développement de l'outil, un travail sur l'<span class="text-emphase">automatisation des campagnes de validation</span> et une continuité de service sont assurés.   
                     </p>
                     <p class="text-justify">
-                      Développement d'un framerwork d'exploitation et de visualisation des données venant de l'intégration continue. La réalisation de ce projet a nécessité le développement d'un plug-in Jenkins pour la communication avec une base de données,ainsi que la création des schémas, indexes, vues et procédures stockées de cette base. La spécification, le développement et le déploiement en production d'une application web pour la visualisation des résultats.
+                      Développement d'un framerwork d'exploitation et de visualisation des données venant de l'intégration continue. La réalisation de ce projet a nécessité le développement d'un <span class="text-emphase">plug-in Jenkins</span> pour la communication avec une base de données,ainsi que la création des <span class="text-emphase">schémas, indexes, vues et procédures stockées</span> de cette base. La <span class="text-emphase">spécification</span>, le <span class="text-emphase">développement</span> et le <span class="text-emphase">déploiement</span> en production d'une <span class="text-emphase">application web</span> pour la visualisation des résultats.
                     </p>
                   </div>
                 </div>
@@ -352,7 +352,7 @@
                 <div class="col-xs-12">
                   <div class="job-description">
                     <p class="text-justify">
-                       En tant qu'ingénieur en informatique industrielle, j'ai travaillé sur l'élaboration d'une nouvelle architecture logicielle pour rendre le code plus générique et modulaire. Ce projet a commencé durant mon stage de fin d'étude et c'est poursuivit en tant qu'employé.
+                       En tant qu'ingénieur en informatique industrielle, j'ai travaillé sur l'élaboration d'une nouvelle <span class="text-emphase">architecture logicielle</span> pour rendre le code plus générique et modulaire. Ce projet a commencé durant mon stage de fin d'étude et c'est poursuivit en tant qu'employé.
                     </p>
                     <p class="text-justify">
                     Chef de projet sur des systèmes complets ( automate programmable, électricité, mécanique). Projets internationaux (Asie, Europe et Moyen-Orient) allant de 10k€ à +100k€. Interface principale avec le client après le bon de commande, j'avais en charge la gestion des points importants (planning de fabrication, tests en usine, mise en service) et le support technique.
