change icon size

--- a/resume_fr.html
+++ b/resume_fr.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="row">
                   <div class="col-xs-1">
-                    <img src="icon/gmail.ico" width="20px" height="20px"/>    
+                    <img src="icon/gmail.png" width="20px" height="20px"/>    
                   </div>
                   <div class="col-xs-10">
                     florent.daligand@gmail.com
@@ -191,7 +191,7 @@
                           <img src="icon/jenkins.png" height="20px" width="20px"> Jenkins</img>
                         </div>
                         <div class="col-xs-4 tools-item">
-                          <img src="icon/linux.svg" height="20px" width="20px"> Linux</img>
+                          <img src="icon/linux.png" height="20px" width="20px"> Linux</img>
                         </div>
                         <div class="col-xs-4 tools-item">
                           <img src="icon/shell.png" height="20px" width="20px"> Shell script</img>
@@ -215,7 +215,7 @@
                           <img src="icon/sql.png" height="20px" width="20px"> SQL</img>
                         </div>
                         <div class="col-xs-4 tools-item">
-                          <img src="icon/django.png" height="20px" width="20px"> Django </img>
+                          <img src="icon/django-icon_0.png" height="20px" width="20px"> Django </img>
                         </div>
                         <div class="col-xs-4 tools-item">
                           <img src="icon/apache.png" height="20px" width="20px"> Apache</img>
