--- a/resume_fr.html
+++ b/resume_fr.html
@@ -93,7 +93,7 @@
         </div>
         <div class="row">
           <div class="col-xs-12 icon text-center">
-              <h2 class="title-job"> Ingénieur Logiciel</h2>
+              <h2 class="title-job"> Développeur Full Stack</h2>
           </div>
         </div>
       </div>
@@ -109,10 +109,14 @@
     			    <p class="text-justify" >
                 Je développe des outils pour <span class="text-emphase">automatiser et optimiser le développement logiciel</span>,mais aussi pour analyser les données afin d'en sortir les informations essentielles. Je travaille également sur le développement d'application web pour mettre en valeur ces données.<br>
 
-                Je suis passionné par l'<span class="text-emphase">apprentissage de nouvelles technologies</span> et je pense que cela doit faire partie intégrante de mon travail. Les domaines sont divers, du big data aux systèmes embarqués pour l'IOT, en passant par les méthodolgie de travail ou les technologies du web.
-                Pendant mes développements, j'aime prendre du recul et analyser mon travail, afin de fournir la solution optimal à un besoin.  
 
+                Je suis passionné par l'<span class="text-emphase">apprentissage de nouvelles technologies</span> et je pense que cela doit faire partie intégrante de mon travail. Les domaines sont divers, du big data aux systèmes embarqués pour l'IOT, en passant par les méthodolgie de travail ou les technologies du web.
+                  
                 Je suis quelqu'un de <span class="text-emphase">créatif, sérieux et impliqué</span>, qui aime aider, partager et apprendre avec ses collègues.
+                Pendant mes développements, j'aime prendre du recul et analyser mon travail, afin de fournir la solution optimal à un besoin.
+
+                Fan de <span class="text-emphase">Python</span>, de <span class="text-emphase">javascript</span> et de <span class="text-emphase">NoSQL</span>, je crée également des applications sur mon temps libre pour me faciliter l'accés aux données du web. 
+
     			    </p>
         		</div>
             <div class="col-xs-12 education">
@@ -307,11 +311,11 @@
                 <div class="col-xs-12">
                   <div class="job-description">
                     <p class="text-justify"> 
-                      Développement et déploiement de l'<span class="text-emphase">intégration continue</span> pour une équipe Firmware. Cet outil permet la compilation et la validation compète d'une application pour cahque modifications apportées au code source.
-                      En parallèle du développement de l'outil, un travail sur l'<span class="text-emphase">automatisation des campagnes de validation</span> et une continuité de service sont assurés.   
+                      Développement et déploiement de l'<span class="text-emphase">intégration continue</span> pour une équipe Firmware. Cet outil (Jenkins) permet la compilation et la validation compète d'une application pour cahque modifications apportées au code source.
+                      En parallèle du déploiement de l'outil, un travail sur l'<span class="text-emphase">automatisation des campagnes de validation</span>, principalement via des scripts python, ainsi qu'une continuité de service sont assurés.   
                     </p>
                     <p class="text-justify">
-                      Développement d'un framerwork d'exploitation et de visualisation des données venant de l'intégration continue. La réalisation de ce projet a nécessité le développement d'un <span class="text-emphase">plug-in Jenkins</span> pour la communication avec une base de données,ainsi que la création des <span class="text-emphase">schémas, indexes, vues et procédures stockées</span> de cette base. La <span class="text-emphase">spécification</span>, le <span class="text-emphase">développement</span> et le <span class="text-emphase">déploiement</span> en production d'une <span class="text-emphase">application web</span> pour la visualisation des résultats.
+                      Développement d'une <span class="text-emphase">application web</span> via le framework Django (Python) pour la visualisation des résultats de l'intégartion continue. Responsable de la partie <span class="text-emphase">back-end</span> de l'application (communication avec la base de données, gestion des utilisateurs, administration du serveur) mais également de la partie <span class="text-emphase">front-end</span> via le framework bootsrap et la librairie D3.js.   
                     </p>
                   </div>
                 </div>
